.provarCaches/00D410000011HE0EAM/objects/rstk__sowarrusg__c.object
<CustomObject>
    <description>sowarrusg__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sowarrusg_sowarr__r.rstk__externalid__c + &apos;_&apos; + text(rstk__sowarrusg_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sowarrusg_sowarr__r.Name + &apos; (&apos; + text(rstk__sowarrusg_date__c) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusg_date__c</fullName>
        <label>Usage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusg_sowarr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Serialized Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipName>sowarrusgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusg_usage1__c</fullName>
        <label>Type 1 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusg_usage2__c</fullName>
        <label>Type 2 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sowarrusg_usage3__c</fullName>
        <label>Type 3 Usage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__RS_Device_Daily_Usage</fullName>
        <columns>NAME</columns>
        <columns>rstk__sowarrusg_sowarr__c</columns>
        <columns>rstk__sowarrusg_usage1__c</columns>
        <columns>rstk__sowarrusg_usage2__c</columns>
        <columns>rstk__sowarrusg_usage3__c</columns>
        <columns>rstk__sowarrusg_usage4__c</columns>
        <columns>rstk__sowarrusg_usage5__c</columns>
        <columns>rstk__sowarrusg_usage6__c</columns>
        <columns>rstk__sowarrusg_date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Device Daily Usage</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Device Daily Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Daily Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>